# S23_DARPA

./: .gitignore  demo_1.py  demo_2.py  demo_3.py  demo_4.py  example.py  main.py  pyproject.toml  readme.md  utils.py  workflow.ipynb  workflow.py
.doctrees/: environment.pickle  index.doctree
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: example.py  scratch.py
examples/sample_topologies/G6/C1/: G6C1I0.json
src/task1/: __init__.py  classification.py  enumeration.py  geometric_realizations.py  utils.py
